# birl_baxter_demos

./: .gitignore  LICENSE  README.md
RL_baxter_demo/examples/scripts/: list_envs
RL_baxter_demo/gym/envs/: __init__.py
RL_baxter_demo/gym/envs/robotics/: __init__.py  baxter_env.py  baxter_utils.py  fetch_env.py  robot_env.py  test.py
RL_baxter_demo/scripts/: Humanblock.py  MUJOCO_LOG.TXT  baxterReach.py
baxter_dmp_rl/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
baxter_dmp_rl/datasets/: 3D_demo_data.csv  baxter_joint_input_data(this dataset have some error).csv  baxter_joint_input_data.csv  baxter_joint_input_data.csv~  baxter_joint_output_data.csv  baxter_joint_output_data0.csv  baxter_joint_output_data1.csv  baxter_joint_output_data2.csv  baxter_joint_output_data3.csv  baxter_joint_output_data4.csv  joint_angles.txt  joint_angles.txt~  right_limb_return_to_start.csv  right_limb_return_to_start0.csv
baxter_dmp_rl/include/dmp/: dmp.h
baxter_dmp_rl/launch/: 3D_dmp_demo.launch  baxter_r_arm_dmp.launch  baxter_r_arm_dmp.launch~  baxter_r_arm_move.launch  baxter_r_arm_move.launch~  dmp.launch
baxter_dmp_rl/nodes/: dmp_server.cpp  trac_ik_test.cpp
baxter_dmp_rl/scripts/: Baxter_DMP_RL_joint_trajectory_learn_client.py  agent.py  baxter_r_arm_dmp.py  baxter_r_arm_dmp.py~  baxter_r_arm_dmp_return_to_start.py  baxter_r_arm_dmp_return_to_start.py~  dmp_3d_demo.py  dmp_3d_demo.py~  dmp_FKinIKin.py  dmp_joint_trajectory_action_server.py  dmp_joint_trajectory_client.py~  pick_n_place_box.py~
baxter_dmp_rl/src/: dmp.cpp  dmp.cpp.autosave
baxter_dmp_rl/wiki/: wiki.md
baxter_end_effector_control/: CMakeLists.txt  README.md  marker.rviz  package.xml
baxter_end_effector_control/documentation/: ReadMe.txt
baxter_end_effector_control/ikfast_deprecated/: CMakeLists.txt  end_effector_command_solver_ikfast.cpp  end_effector_command_solver_ikfast_left.cpp  end_effector_command_solver_ikfast_right.cpp  end_effector_marker_control.launch  end_effector_marker_control_ikfast.cpp  ikfastdemoright.cpp  package.xml
baxter_end_effector_control/ikfast_deprecated/real/: baxter_left_arm_ikfast_solver.cpp  baxter_right_arm_ikfast_solver.cpp
baxter_end_effector_control/launch/: end_effector_control.launch  trac_ik_test.launch
baxter_end_effector_control/scripts/: #end_effector_keyboard_control.py#  control_command_subscriber.py  end_effector_command_solver.py  end_effector_keyboard_control.py  end_effector_trajectory_client.py  ikfast_transform.py  joystick_control.py  keyboard_control.py
baxter_end_effector_control/src/: end_effector_marker_control.cpp  trac_ik_test.cpp
baxter_pick_and_learn/: CMakeLists.txt  Readme  package.xml
baxter_pick_and_learn/launch/: select_color.launch
baxter_pick_and_learn/src/: camera.cpp  camera.cpp_beijing  camera.h  movearm.cpp  pickandlearn.cpp  piece.cpp
baxter_pick_and_learn/src/origin_src/: baxtercontroller.cpp  baxtercontroller.h  camera.cpp  pickandlearn.cpp  piece.h  serialize_test.cpp  snapshot.cpp
darknet_ros/: CMakeLists.txt  README.md  package.xml
darknet_ros/darknet/: Makefile  darknet.kdev4
darknet_ros/darknet/.kdev4/: darknet.kdev4
darknet_ros/darknet/examples/: yolo.c~
darknet_ros/darknet/scripts/: voc_label.py
darknet_ros/launch/: freenect.launch~  yolo_kinect_ros.launch  yolo_kinect_ros.launch~
darknet_ros/src/: run_yolo.cpp  yolo_ros.cpp  yolo_ros.h~
darknet_ros/weights/: README.md
deep_tracking/: README.md  README.md~
deep_tracking/configs/: generate_real_example.json  generate_real_example.json~  generate_synthetic_example.json  test_example.json  test_example.json~  train_example.json  train_example.json~
deep_tracking/deeptracking/utils/: plyparser.py
face_tracker/: CMakeLists.txt  package.xml
face_tracker/launch/: face_follower.launch
face_tracker/src/: face_follower.py
greet_demo/: READ_ME  voice_nav.py
human_activity_anticipation/: CMakeLists.txt  README.md  README.md~
human_activity_anticipation/src/: pointcloudClustering.h
hybrid_position_force_controller/code/: mpid4.py
kinect_based_arm_tracking/: CMakeLists.txt  README  README~  package.xml
kinect_based_arm_tracking/scripts/: tf_listen_v8_controller.py  tf_listen_v8_puber.py
openpose/: README.md
pick_n_place_demo/pa_demo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
pick_n_place_demo/pa_demo/config/: goal_pose.yaml  goal_pose.yaml~
pick_n_place_demo/pa_demo/documentation/: 20160513-pa_demo_tests_n_evaluation  snapAssembly-positionControlDemo_Instructions_001.docx  snapAssembly-positionControlDemo_Instructions_002.docx
pick_n_place_demo/pa_demo/launch/: pa.launch  pa.launch~
pick_n_place_demo/pa_demo/scripts/pa_demo/: pa_closeHand.py  pa_jtc.py  pa_jtc_jointAngles.py  pa_jtc_tracIK.py  pa_jtc_tracIK.py~  pa_openHand.py
pick_n_place_demo/pa_demo/src/pa_demo/: pa_closeHand.py~  pa_jtc.py~  pa_jtc_rightArm.py~  pa_jtc_tracIK.py~  pa_openHand.py~
ros_dqrobotics/: README
ros_dqrobotics/.svn/: entries
ros_dqrobotics/dq_robotics/: CMakeLists.txt  package.xml
ros_dqrobotics/dq_robotics/cfg/: dqdynamic.cfg
ros_dqrobotics/dq_robotics/src/: #baxterdqcontrol.cpp#  baxter_communication.cpp  baxter_communication.h  baxterdqcontrol.cpp  baxterdqcontrol.h  dynamic_tutorials.cpp
the_illusion_of_a_thinking_machine/: CMakeLists.txt  README.md  package.xml
the_illusion_of_a_thinking_machine/BaxterVoice/: 1.wma  2.wma  3.wma  4.wma
the_illusion_of_a_thinking_machine/launch/: preload_head_face.launch
the_illusion_of_a_thinking_machine/src/manger/: manager.py
the_illusion_of_a_thinking_machine/src/stage0/: arm_stage0  face_stage0.py
the_illusion_of_a_thinking_machine/src/stage1/: arm_stage1.py  face_stage1.py  head_stage1.py
the_illusion_of_a_thinking_machine/src/stage2/: arm_stage2.py  face_stage2.py  head_stage2.py
the_illusion_of_a_thinking_machine/src/stage3/: arm_stage3.py  face_stage3.py  head_stage3.py
visual_servoing/: CMakeLists.txt  README.md  package.xml
visual_servoing/src/: visual_servoing.py  visual_servoing_setup.py
(+27 files in other folders)
