<?xml version="1.0"?>
<package>
  <name>baxter_dmp_rl</name>
  <version>1.0.0</version>
  <description>Implements DMP and RL in a robot agnostic way</description>

  <author>Scott Niekum</author>
  <maintainer email="dennis-birl@gmail.com">Dennis Chen</maintainer>

  <license>BSD</license>
  
  <url type="website">https://github.com/Dennis-BIRL-GDUT</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>common_msgs</run_depend> <!-- nav_msgs, sensor_msgs, geometry_msgs -->
  <run_depend>image_common</run_depend>
  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>  <!-- rospy, roscpp -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
