<?xml version="1.0"?>
<package>
  <name>baxter_end_effector_control</name>
  <version>0.0.0</version>
  <description>The baxter_end_effector_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ekuri2014@outlook.com">ekuri</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>baxter_pykdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>kdl_conversions</build_depend>

  <run_depend>kdl_conversions</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>baxter_pykdl</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
